[project]
name = "nonebot_plugin_rrc"
description = "基于nonebot2的随机点名"
version = "0.0.1"
authors = [
    {name = "青木", email = "1242550160@qq.com"},
]
readme = "README.md"
license = {text = "GPL-3"}
requires-python = ">=3.10"
keywords = ["nonebot2", "随机点名", "点名"]
[project.urls]
Homepage = "https://github.com/QingMuCat/nonebot_plugin_rrc"


[build-system]
requires = [
  "setuptools >= 67.4.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_rrc*"]
